crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_u_string_concat_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..17,
            value: String(
                ExprString {
                    range: 0..17,
                    value: StringExprValue {
                        inner: Concatenated(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..9,
                                        value: "Hello ",
                                        unicode: true,
                                    },
                                    StringLiteral {
                                        range: 10..17,
                                        value: "world",
                                        unicode: false,
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
