crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__raw_byte_literal_1.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..8,
            value: Bytes(
                ExprBytes {
                    range: 0..8,
                    value: BytesExprValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..8,
                                value: [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
