crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__raw_byte_literal_2.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..6,
            value: Bytes(
                ExprBytes {
                    range: 0..6,
                    value: BytesExprValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..6,
                                value: [
                                    92,
                                    92,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
