crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__string_parser_escaped_mac_eol.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..18,
            value: String(
                ExprString {
                    range: 0..18,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..18,
                                value: "text more text",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
