crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__string_parser_escaped_windows_eol.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..19,
            value: String(
                ExprString {
                    range: 0..19,
                    value: StringExprValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..19,
                                value: "text more text",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
